fixed a bug with OPTIONS request method